<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/My.Button"
                android:id="@+id/calculate"
                android:text="@string/calculate"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:layout_centerVertical="true"
                >
            </Button>



        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableRow>

            <TextView
                android:layout_width="79dp"
                android:layout_height="39dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/label_array"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:background="@color/light"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:text="@string/arraylist"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_linked"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:background="@color/light"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:text="@string/linkedlist"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/label_copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:background="@color/light"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:text="@string/copyonwritearraylist"
                android:textSize="12sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label_add_mid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:background="@color/light"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:text="@string/addmid"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/add_mid_result_array"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/add_mid_result_linked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/add_mid_result_copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label_remove_mid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:background="@color/light"
                android:gravity="center_horizontal"
                android:padding="4sp"
                android:text="@string/removemid"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/remove_mid_result_array"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/remove_mid_result_linked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/remove_mid_result_copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:background="@color/light"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:text="@string/search"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/search_result_array"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/search_result_linked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="4"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/search_result_copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2dp"
                android:layout_weight="7"
                android:gravity="center_horizontal|center_vertical"
                android:padding="4sp"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>




</androidx.constraintlayout.widget.ConstraintLayout>